--- a/debian/rules
+++ b/debian/rules
@@ -9,3 +9,20 @@ override_dh_auto_configure:
 	dh_auto_configure -- -DEMBED_TRANSLATIONS=ON -DBUILD_TESTING=ON \
 		-DCMAKE_INSTALL_FULL_LIBDIR=/usr/lib/x86_64-linux-gnu \
 		-DINSTALL_QMLDIR=/usr/lib/x86_64-linux-gnu/qt6/qml
+
+override_dh_install:
+	dh_install
+	# 修复qrc文件中的绝对路径问题
+	if [ -d debian/tmp ]; then \
+		find debian/tmp -name "*.qrc" -type f | while read qrc_file; do \
+			echo "Fixing qrc file: $$qrc_file"; \
+			sed -i 's|/workspace/cutefish_project/cutefish/code/[^/]*/obj-x86_64-linux-gnu/||g' "$$qrc_file"; \
+		done; \
+	fi
+
+# 安装postinst和postrm脚本
+override_dh_installdeb:
+	dh_installdeb
+	# 复制postinst和postrm脚本
+	install -m 755 debian/fishui.postinst debian/fishui/DEBIAN/postinst
+	install -m 755 debian/fishui.postrm debian/fishui/DEBIAN/postrm
